# tiny-gpt

./: CMakeLists.txt
include/: config.h  dataloader.h  dataset.h  embedding.h  linear.h  matrix.h  tokenizer.h
src/: dataloader.cpp  dataset.cpp  embedding.cpp  linear.cpp  matrix.cpp  tokenizer.cpp
test/: test_dataloader.cpp  test_dataset.cpp  test_embedding.cpp  test_linear.cpp  test_matrix.cpp  test_tokenizer.cpp
